cluster/traefik/whoami/whoami-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-ingress
  namespace: traefik-v2
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.tls.options: traefik-v2-whoami-tls-options@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    #traefik.ingress.kubernetes.io/router.middlewares: traefik-v2-whoami-headers@kubernetescrd
spec:
  rules:
  - host: "whoami.iamalex82.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whoami
            port:
              number: 80
